testando teclas de atalho

--- a/site-Exemplo/index.html
+++ b/site-Exemplo/index.html
@@ -14,5 +14,8 @@
     <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum, sint? Ut harum deleniti dolore voluptates animi consequatur, aspernatur ex nihil eveniet unde velit quos hic adipisci voluptas voluptatum, cumque nisi.
     </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea possimus sint odit voluptatibus deleniti consequatur, molestias voluptatem exercitationem quis repellendus reprehenderit tempore necessitatibus nostrum quam! Sed aliquid reiciendis expedita quae?
+    </p>
 </body>
 </html>
